--- a/project/emp-springmvc/sonar-project.properties
+++ b/project/emp-springmvc/sonar-project.properties
@@ -7,9 +7,10 @@
 #----- Default source code encoding
 #sonar.sourceEncoding=UTF-8
 
-sonar.projectKey=empapp
+sonar.projectKey=emp-springmvc
 sonar.projectVersion=1.0
-sonar.projectBaseDir=C:/Users/Administrator/Desktop/empapp
+sonar.projectBaseDir=D:/Assesment/emp-springmvc (1)/emp-springmvc
 sonar.sources=src/main/java
+sonar.java.source=1.8
 sonar.tests=src/test/java
 sonar.java.binaries=.
